# kegg-map-wizard

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
kegg_map_wizard/: ColorMaker.py  KeggAnnotation.py  KeggMap.py  KeggMapWizard.py  KeggShape.py  __init__.py  kegg_download.py  kegg_utils.py
kegg_map_wizard/html/: map_tester.html
kegg_map_wizard/js/: DummyRightClickMenu.js  PathwaySvgLib.js
lib/: OutlineStrokeInkscape.py  OutlineStrokeJsLib.py
tests/: test_ColorMaker.py  test_custom_kegg.py  test_kegg_map_wizard.py
